--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,56 @@
-À vous !
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <section class="carte"> 
+        <section class="carte__identity">
+          <p>Pokémon de base</p>
+            <div class="identity__name">
+                <p>BULBIZARRE</p>
+                <figcaption class="identity__info">
+                40 PV <img src="./assets/img/leaf.png"></figcaption>
+            </div>
+        </section>
+
+
+
+        <section class="carte__apparence">
+            <img src="./assets/img/bulbizarre.jpg">
+            <div class="apparence__description">Pokémon Graine. Taille: 0,7m, poids: 6,9 kg</div>
+        </section>
+
+
+
+
+
+        <section class="carte__information">
+            <img src="./assets/img/leaf.png" class="information__type">
+            <img src="./assets/img/leaf.png" class="information__type">
+            <p class="information__ability">
+                Vampigraine À moins que tous les dégats infigés par cette 
+                attaque ne soient prévenus, vous pouvez retirer 1 marqueur 
+                de dégats de Bulbizarre.
+            </p>
+        </section>
+
+
+         
+        <section class="carte__footer">
+            <div class="footer__title">
+                <p>Faiblesse </p>
+                <p>Résistance</p>
+                <p>Coût de retraite</p>
+            </div>
+            <div class="footer__element">
+                <img src="./assets/img/normal.png">
+                <div></div>
+                <img src="./assets/img/fire.png">
+            </div>
+        </section>
+    </section>
+</body>
+</html>
